jenkins_demo/kube/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins-kube-test    #指定namespace
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080          #服务端口
    targetPort: 8080
  - name: jnlp
    port: 50000         #代理端口
    targetPort: 50000
  selector:
    app: jenkins
